# KoongTodGlua

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  LICENSE  README.md  build_dataset.py  docker-compose.yaml  test.py
docs/: DESIGN.md  HANDOFF-frontend-visuals.md  UI.md  design.md
docs/superpowers/plans/: 2026-07-10-clip-upload-wizard.md
replay-engine/: README.md  pyproject.toml
replay-engine/app/: clips.py  derive.py  main.py  predictor.py  schemas.py  statsbomb_gateway.py  store.py
replay-engine/scripts/: fetch_match.py
replay-engine/tests/: conftest.py  test_add_match.py  test_api.py  test_catalog.py  test_clip_endpoints.py  test_clips.py  test_derive.py  test_flow.py  test_moments.py
scripts/: build_dataset.py  run.py  train.py
ui/: next.config.ts  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/add-match/: add-match-screen.tsx
ui/src/components/home/: home-screen.tsx
ui/src/components/persona/: persona-screen.tsx
ui/src/components/replay/: replay-overlay.tsx
ui/src/components/ui/: chip.tsx  live-badge.tsx
ui/src/components/viewer/: adaptive-stats.tsx  pitch-view.tsx  predictor-panel.tsx  score-bug.tsx  timeline.tsx  viewer-screen.tsx
ui/src/hooks/: use-match-clock.ts  use-match-data.ts
ui/src/lib/: heuristics.ts  match-data.ts  replay-client.ts
ui/src/store/: match-store.ts
