[project]
name = "replay-engine"
version = "0.1.0"
description = "AdaptiveMatch replay engine — serves StatsBomb-derived match state snapshots"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Only needed by scripts/fetch_match.py (dev machine or Docker fetch stage),
# never by the running service.
fetch = [
    "statsbombpy>=1.14",
    "pandas>=2.0",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
